# react-bdd-cucumber

./: .gitignore  README.md  cucumber.cjs  cucumber.js  docker-compose.test.yml  docker-compose.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  security.yml
backend/: Dockerfile  init.sql  pyproject.toml
backend/app/: main.py
backend/app/application/: services.py
backend/app/domain/: entities.py  repositories.py
backend/app/infrastructure/: mappers.py  repositories.py
backend/app/presentation/: api.py  dependencies.py  schemas.py
backend/tests/features/: checkout.feature
backend/tests/steps/: test_checkout_steps.py
features/: cart.feature
features/support/: hooks.ts  world.ts
frontend/: Dockerfile  README.md  openapi-ts.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/features/: checkout.feature  product-list.feature
frontend/features/step-definitions/: shop.steps.ts
frontend/features/support/: world.ts
frontend/openapi/: shop.openapi.yaml
frontend/scripts/: check-architecture.mjs  generate-sdk.mjs
frontend/src/: architecture-layers.md  main.tsx  styles.css
frontend/src/api/: shopApi.ts
frontend/src/app/: App.tsx  AppLayout.tsx
frontend/src/hooks/: useShopData.ts
frontend/src/routes/: AppRoutes.tsx
frontend/src/types/: cart.ts  order.ts
frontend/tests/domain/: GetProductsUseCase.test.ts
src/: main.tsx
src/app/: AppLayout.tsx
src/mocks/: products.ts  user.ts
src/state/: store.ts
src/types/: order.ts
(+46 files in other folders)
