[project]
name = "bdd-shop-backend"
version = "0.1.0"
description = "FastAPI backend with clean architecture and BDD"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-bdd>=7.2.0",
  "httpx>=0.27.0",
  "schemathesis>=4.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
